--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 	<head>
+    <script type="text/javascript"
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 	</head>
 	<body>
 		<h3>CS184/284A Homework Webpages</h3>
